tests/ui/parser/break_continue_outside_loop.stderr
error: 'break' has to be in a 'for' or 'while' loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: 'continue' has to be in a 'for' or 'while' loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: aborting due to 2 previous errors

